# colorblind-snapshot-analyzer

./: .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  action.yml  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: check_test.yml  ci_entrypoint.yml  test-colorblin-locally.yml  test-colorblind.yml
colorblind_snapshot_analyzer/: analyze.py  local.py  main.py
src/: main.js
tests/: test_analyze.py
