[tool.poetry]
name = "colorblind-snapshot-analyzer"
version = "1.0.1"
description = "A tool to analyze and visualize colorblindness in images using Daltonize and Pillow."
authors = ["NotTheRealWallyx <nottherealwallyx@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
pillow = ">=11.2.1,<12.0.0"
daltonize = ">=0.2.0,<0.3.0"
requests = ">=2.32.4,<3.0.0"
pygithub = ">=2.6.1,<3.0.0"
setuptools = ">=80.9.0,<81.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [{ include = "colorblind_snapshot_analyzer" }]