[project]
name = "colorblind-snapshot-analyzer"
version = "1.0.1"
description = "A tool to analyze and visualize colorblindness in images using Daltonize and Pillow."
authors = [
  { name = "NotTheRealWallyx", email = "nottherealwallyx@gmail.com" }
]
license = { text = "AGPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pillow>=11.2.1,<12.0.0",
  "daltonize>=0.2.0,<0.3.0",
  "requests>=2.32.4,<3.0.0",
  "pygithub>=2.6.1,<3.0.0",
  "setuptools>=80.9.0,<81.0.0"
]

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pre-commit = "^4.3.0"
isort = "^6.0.1"
pytest = "^8.4.2"
pytest-cov = "^6.3.0"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.setuptools.packages.find]
include = ["colorblind_snapshot_analyzer"]
